# rules_ts_proto

./: BUILD.bazel  MODULE.bazel  package.json
.github/workflows/: release.yml
docs/: BUILD.bazel
e2e/smoke/: MODULE.bazel  WORKSPACE.bazel
e2e/typescript_proto_usage/: .bazelrc  BUILD.bazel  MODULE.bazel  package.json  pnpm-lock.yaml
e2e/typescript_proto_usage/location/: BUILD.bazel
e2e/typescript_proto_usage/polyline/: BUILD.bazel
e2e/typescript_proto_usage/tests/extending_jasmine/: BUILD.bazel  extending.spec.mjs
e2e/typescript_proto_usage/tests/greeting_jasmine/: BUILD.bazel
ts_proto/: BUILD.bazel  extensions.bzl
ts_proto/codegen/protoc_plugin/: protoc_plugin.go
ts_proto/private/: BUILD.bazel  filtered_files.bzl  ts_proto_library.bzl
