load("@bazel_gazelle//:def.bzl", "gazelle", "gazelle_binary")
load("@rules_ts_proto_npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(name = "node_modules")

gazelle_binary(
    name = "gazelle_bin",
    languages = [
        "@bazel_skylib_gazelle_plugin//bzl",
        "@bazel_gazelle//language/go",  # Built-in rule from gazelle for Golang.
        "@bazel_gazelle//language/proto",  # Built-in rule from gazelle for Protos.
    ],
)

# gazelle:prefix github.com/gonzojive/rules_ts_proto
# gazelle:build_file_name BUILD,BUILD.bazel
gazelle(
    name = "gazelle",
    gazelle = "gazelle_bin",
)
