"Rules for building TypeScript protos compatible with rules_ts and rules_js."

module(
    name = "rules_ts_proto",
    version = "0.0.1",
    compatibility_level = 0,
)

bazel_dep(name = "bazel_skylib", version = "1.4.1")
bazel_dep(name = "platforms", version = "0.0.5")
bazel_dep(
    name = "protobuf_javascript_gonzojive",
    version = "3.21.5.gonzojive",
    repo_name = "com_google_protobuf_javascript",
)
bazel_dep(
    name = "grpc-web",
    version = "1.6.0.rc1",
    repo_name = "com_github_grpc_grpc_web",
)

# Go
bazel_dep(name = "gazelle", version = "0.38.0", repo_name = "bazel_gazelle")
bazel_dep(name = "rules_go", version = "0.49.0", repo_name = "io_bazel_rules_go")

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# All *direct* Go dependencies of the module have to be listed explicitly.
use_repo(
    go_deps,
    "com_github_golang_glog",
    "com_github_golang_protobuf",
    "org_golang_google_protobuf",
)

bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.4.1")
bazel_dep(name = "aspect_bazel_lib", version = "2.7.9")

bazel_dep(name = "buildifier_prebuilt", version = "6.1.2", dev_dependency = True)

bazel_dep(name = "rules_proto_grpc", version = "5.0.0")
bazel_dep(name = "rules_proto", version = "6.0.2")
bazel_dep(name = "aspect_rules_ts", version = "3.1.0")

rules_ts_ext = use_extension("@aspect_rules_ts//ts:extensions.bzl", "ext", dev_dependency = True)
rules_ts_ext.deps()
use_repo(rules_ts_ext, "npm_typescript")

bazel_dep(name = "aspect_rules_js", version = "2.0.0")

####### Node.js version #########
# By default you get the node version from DEFAULT_NODE_VERSION in @rules_nodejs//nodejs:repositories.bzl
# Optionally you can pin a different node version:
bazel_dep(name = "rules_nodejs", version = "6.2.0")
#node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node", dev_dependency = True)
#node.toolchain(node_version = "16.14.2")
#################################

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "rules_ts_proto_npm",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(npm, "rules_ts_proto_npm")

pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm")

# Allows developers to use the matching pnpm version, for example:
# bazel run -- @pnpm --dir /home/runner/work/rules_js/rules_js install
use_repo(pnpm, "pnpm")

# Needed to resolve https://github.com/bazelbuild/bazel-central-registry/issues/2538.
# Note this only has an effect when single_version_override is in the root module,
# ruls_ts_proto. You'll need to copy paste it into.
single_version_override(
    module_name = "grpc-java",
    version = "1.64.0",
)
