load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

# For stardoc to reference the files
exports_files(["defs.bzl"])

bzl_library(
    name = "repositories",
    srcs = ["repositories.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_tools//tools/build_defs/repo:http.bzl",
        "@bazel_tools//tools/build_defs/repo:utils.bzl",
    ],
)

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    visibility = ["//visibility:public"],
    deps = ["//ts_proto/private:ts_proto_library"],
)

bzl_library(
    name = "workspace_deps",
    srcs = ["workspace_deps.bzl"],
    visibility = ["//visibility:public"],
    deps = ["@aspect_rules_js//npm:npm_import"],
)
