# Override http_archive for local testing
local_repository(
    name = "com_gonzojive_ts_proto",
    path = "../..",
)

#---SNIP--- Below here is re-used in the workspace snippet published on releases

######################
# rules_mylang setup #
######################
# Fetches the rules_mylang dependencies.
# If you want to have a different version of some dependency,
# you should fetch it *before* calling this.
# Alternatively, you can skip calling this function, so long as you've
# already fetched all the dependencies.
load("@com_gonzojive_ts_proto//mylang:repositories.bzl", "rules_mylang_dependencies")

rules_mylang_dependencies()
