load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_ts_proto//ts_proto:defs.bzl", "ts_proto_library")

IMPLICIT_DEPS = {
    "grpc-web": ["//:node_modules/grpc-web"],
    "google-protobuf": ["//:node_modules/google-protobuf"],
    "@types/google-protobuf": ["//:node_modules/@types/google-protobuf"],
}

proto_library(
    name = "location_proto",
    srcs = ["location.proto"],
    import_prefix = "github.com/gonzojive/rules_ts_proto/example/prefix",
    visibility = ["//visibility:public"],
)

ts_proto_library(
    name = "location_ts_proto",
    implicit_deps = IMPLICIT_DEPS,
    proto = ":location_proto",
    visibility = ["//visibility:public"],
)
