load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_ts_proto//ts_proto:defs.bzl", "ts_proto_library")

proto_library(
    name = "polyline_proto",
    srcs = ["polyline.proto"],
    import_prefix = "github.com/gonzojive/rules_ts_proto/example/prefix",
    visibility = ["//visibility:public"],
    deps = ["//location:location_proto"],
)

IMPLICIT_DEPS = {
    "grpc-web": ["//:node_modules/grpc-web"],
    "google-protobuf": ["//:node_modules/google-protobuf"],
    "@types/google-protobuf": ["//:node_modules/@types/google-protobuf"],
}

ts_proto_library(
    name = "polyline_ts_proto",
    implicit_deps = IMPLICIT_DEPS,
    proto = ":polyline_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//location:location_ts_proto",
    ],
)
